[package]
name = "articy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
evalexpr = "8.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.93"
strum_macros = "0.24.3"

[[bin]]
name = "command-line-runner"
path = "src/bin/cli.rs"
